2007-05-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.h, src/rb_cairo_surface.c: improved win32 surface
	support. Thanks to Yoshinao Muramatsu!

	* src/rb_cairo.h, src/cairo.def, src/rb_cairo_constants.rb:
	added a module for each enum type.
	* src/lib/cairo/constants.rb: kept the backward compatibility.

2007-05-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/context/circle.rb (Cairo::Context::Circle#circle):
	renamed parameter name to be more self-descriptive.

	* src/rb_cairo.h, src/cairo.def, src/rb_cairo_surface.c:
	supported win32 surface. Thanks to Yoshinao Muramatsu!!!

	* README: added an entry for Yoshinao Muramatsu.

2007-05-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_private.[ch] (rb_cairo__glyphs_to_array,
	RB_CAIRO__GLYPHS_TO_ARRAY): fixed wrong memory allocation.
	* src/rb_cairo_context.c, src/rb_cairo_scaled_font.c: used
	RB_CAIRO__GLYPHS_TO_ARRAY instead of rb_cairo__glyphs_to_array().

	* src/rb_cairo_context.c (cr_set_dash):
	- made offset optional.
	- accepted a number for dash_array.

2007-05-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c (cr_get_group_target): added NULL check.

	* src/rb_cairo_context.c (cr_get_font_face): checked status of got
	font face not context.

	* src/rb_cairo_context.c (cr_set_font_face): accepted nil as font
	face.

	* src/rb_cairo_context.c (cr_copy_path, cr_copy_path_flat):
	checked status of copied path not context.

2007-05-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_surface.c (cr_surface_create_similar): retrieved
	corresponding Ruby class by cairo_surface_get_type().

2007-05-06  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_path.c, src/lib/cairo.rb, src/lib/cairo/path.rb:
	added path related methods such as move_to, line_to and curve_to
	to Cairo::Path.

	* src/lib/cairo/context/path.rb
	(Cairo::Context::Path#transform_path): multi-thread safe.

2007-05-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_path.c